--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 # Uncomment and set the URL of your site (with protocol, e.g. `https://`)
 # NOTE: You don't need to provide this property when hosting on GitHub Pages or Netlify.
-# url:                   https://username.github.io
+url: https://had2-you.github.io
 
 # Uncomment and set the "base URL" of your site.
 # When your site is in a subdirectory, set to `/<name of directory>`,
@@ -16,7 +16,7 @@
 
 # Language of your content in 2-letter code, e.g.: en, de.
 # You may also provide a location, e.g.: en-us, de_AT.
-lang: en
+lang: ko-KR, en-US
 
 # The title of your blog. Used in the sidebar and the browser tab.
 title: Haeju Lee
@@ -51,7 +51,9 @@ menu:
   - title: About
     url: /about/
   - title: Computer Network
-    url: /docs/
+    url: /ComputerNetwork/
+  - title: Traveling
+    url: /Travel/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
