--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ menu:
   - title: About
     url: /about/
   - title: Computer Network
-    url: /ComputerNetwork/
+    url: /computernetwork/
   - title: Traveling
     url: /Travel/
     # submenu:
