--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ remote_theme: hydecorp/hydejack@v9
 # ----------------------------------------------------------------------------------------
 
 # Sidebar image and theme color of the site.
-accent_image: /assets/img/sidebar-bg.jpeg
+accent_image: /assets/img/sidebar-bg.JPG
 accent_color: rgb(79,177,186)
 
 # This is used for the `theme-color` meta tag,
