readLine 업로드 및 Swift-Study 메뉴 생성

--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,8 @@ menu:
     url: /computernetwork/
   - title: Traveling
     url: /Travel/
+  - title: Swfit Study
+    url: /Swift-Study/
     # submenu:
     #   - title:  Papers
     #     url:      /papers/
